test-suite/output/ErrorLocation_12255.out
File "./output/ErrorLocation_12255.v", line 4, characters 0-16:
Error: Ltac variable x is bound to i > 0 which cannot be coerced to
an evaluable reference.

